# BTL

./: .gitignore  BAO_CAO_BAI_TOAN_VA_GIAI_QUYET.md  EmbeddedEsp_Report_2.md  Postman.json  TEST_GUIDE.md  debug_list_dbs.js  debug_mac_check.js  filter_and_export_for_annotation.py  fix_device_mac.js  merge.py  node_red_flow.json  node_red_flow.json.bak  node_red_flow.json.bak2  normalize_final_result.js  optimize_mongodb.js  package.json  test_mongo.js  test_mongo_full.js  test_mongo_insert.js
.cursor/rules/: embedded-c-conventions.mdc  esp-idf-standards.mdc  sensor-driver-pattern.mdc
All-in-one/: CMakeLists.txt  sdkconfig.old
All-in-one/components/max30105/: CMakeLists.txt  max30105.c
All-in-one/main/: CMakeLists.txt  main.c
Data/: generate_ata_from_esp.py  generate_health_data.py  health_data_all.csv
Documents/: ML_Final_Report.md  ML_Improvement_Plan.md  ML_Technical_Documentation.md  README.md
EmbeddedEsp/: CMakeLists.txt  fix_sdk.py  partitions.csv
EmbeddedEsp/components/app_ds18b20/: CMakeLists.txt  ds18b20.c  thermal_processor.c
EmbeddedEsp/main/: CMakeLists.txt  idf_component.yml  main.c  ptit_logo.h
EmbeddedWaterFlow/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
EmbeddedWaterFlow/main/: CMakeLists.txt  main.c
Notebooks/: Health_Analysis.py
backend/iot-ingestion/: .env  .env.example  DATA_ARCHITECTURE.md  ML_README.md  cleanup_training.py  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  service.py  setup_packages.bat  setup_packages.ps1  train_enhanced.py  train_from_csv.py  train_model.py
backend/web-dashboard/: SPEC.md  USER_GUIDE.md  mvnw.cmd  pom.xml  run.bat
frontend/: PROMPT_BASE44.md  index.html  jsconfig.json  package.json  run.bat  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
(+183 files in other folders)
