idf_component_register(
    SRCS
        "main.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        freertos
        log
        driver
        lwip
        onewire_bus
        esp_adc
        mqtt
        esp-tls
        esp_driver_i2c
        esp_wifi
        esp_netif
        esp_event
        app_ds18b20
        gsr_sensor
        dht11_sensor
        health_data
        max30105
        mqtt_manager
        sensor_hub
        ssd1306
        wifi_manager
)
